# jolt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  release-plz.toml
.github/workflows/: ci.yml  publish-dart.yml
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: error.rs  lib.rs  runtime.rs  value.rs
crates/jolt/: CHANGELOG.md  Cargo.toml
crates/jolt/src/: lib.rs
crates/jsc/: CHANGELOG.md  Cargo.toml  README.md
crates/jsc/src/: convert.rs  lib.rs  runtime.rs
crates/quickjs/: CHANGELOG.md  Cargo.toml  README.md
crates/quickjs/src/: convert.rs  lib.rs  runtime.rs
crates/web/: CHANGELOG.md  Cargo.toml  README.md
crates/web/src/: convert.rs  lib.rs  runtime.rs
flutter_jolt/: .metadata  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
flutter_jolt/android/: build.gradle  settings.gradle
flutter_jolt/android/src/main/: AndroidManifest.xml
flutter_jolt/example/: README.md  pubspec.yaml
flutter_jolt/example/android/app/: build.gradle.kts
flutter_jolt/example/android/app/src/main/: AndroidManifest.xml
flutter_jolt/example/android/app/src/main/kotlin/com/example/flutter_jolt_example/: MainActivity.kt
flutter_jolt/example/integration_test/: simple_test.dart
flutter_jolt/example/ios/Runner/: Info.plist
flutter_jolt/example/ios/Runner.xcodeproj/: project.pbxproj
flutter_jolt/example/lib/: main.dart
flutter_jolt/example/linux/: CMakeLists.txt
flutter_jolt/example/linux/flutter/: generated_plugins.cmake
flutter_jolt/example/linux/runner/: my_application.cc
flutter_jolt/example/macos/Runner.xcodeproj/: project.pbxproj
flutter_jolt/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_jolt/example/macos/Runner/Configs/: AppInfo.xcconfig
flutter_jolt/example/windows/: CMakeLists.txt
flutter_jolt/example/windows/flutter/: generated_plugins.cmake
flutter_jolt/example/windows/runner/: Runner.rc  main.cpp
flutter_jolt/ios/: flutter_jolt.podspec
flutter_jolt/lib/: flutter_jolt.dart
flutter_jolt/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
flutter_jolt/lib/src/rust/api/: simple.dart  simple.freezed.dart
flutter_jolt/linux/: CMakeLists.txt
flutter_jolt/macos/: flutter_jolt.podspec
flutter_jolt/rust/: CHANGELOG.md  Cargo.toml
flutter_jolt/rust/src/: frb_generated.rs
flutter_jolt/rust/src/api/: simple.rs
flutter_jolt/windows/: CMakeLists.txt
