[package]
name = "jolt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-powered JavaScript runtime for Flutter — JSC on Apple, QuickJS elsewhere, host JS on web"
readme = "../../README.md"

[dependencies]
jolt_core = { path = "../core" }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
jolt_jsc = { path = "../jsc" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jolt_web = { path = "../web" }

[target.'cfg(not(any(target_os = "ios", target_os = "macos", target_arch = "wasm32")))'.dependencies]
jolt_quickjs = { path = "../quickjs" }
