[package]
name = "jolt_rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-powered JavaScript runtime for Flutter — JSC on Apple, QuickJS elsewhere, host JS on web"
readme = "../../README.md"

[lib]
name = "jolt"

[features]
default = []
jsc = ["dep:jolt_jsc"]
quickjs = ["dep:jolt_quickjs"]
web = ["dep:jolt_web"]

[dependencies]
jolt_core = { version = "0.1.3", path = "../core" }
jolt_jsc = { version = "0.1.3", path = "../jsc", optional = true }
jolt_quickjs = { version = "0.1.3", path = "../quickjs", optional = true }
jolt_web = { version = "0.1.3", path = "../web", optional = true }
