[package]
name = "jolt_jsc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JavaScriptCore backend for the Jolt JavaScript runtime"

[dependencies]
jolt_core = { path = "../core" }
rusty_jsc = "0.1"
rusty_jsc_sys = "0.1"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
