[package]
name = "jolt_web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM/browser backend for the Jolt JavaScript runtime"

[dependencies]
jolt_core = { path = "../core" }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
