[package]
name = "jolt_web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM/browser backend for the Jolt JavaScript runtime"
readme = "README.md"

[dependencies]
jolt_core = { version = "0.1.3", path = "../core" }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
