[package]
name = "flutter_jolt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
jolt = { path = "../../crates/jolt" }
jolt_core = { path = "../../crates/core" }
flutter_rust_bridge = "=2.11.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
