[package]
name = "flutter_jolt"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
jolt = { path = "../../crates/jolt" }
jolt_core = { path = "../../crates/core" }
flutter_rust_bridge = "=2.11.1"
futures = { version = "0.3", default-features = false, features = ["executor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
