[package]
name = "flutter_jolt"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
jolt_core = { path = "../../crates/core" }
flutter_rust_bridge = "=2.11.1"
futures = { version = "0.3", default-features = false, features = ["executor"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
jolt = { path = "../../crates/jolt", package = "jolt_rs", features = ["jsc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jolt = { path = "../../crates/jolt", package = "jolt_rs", features = ["web"] }

[target.'cfg(not(any(target_os = "ios", target_os = "macos", target_arch = "wasm32")))'.dependencies]
jolt = { path = "../../crates/jolt", package = "jolt_rs", features = ["quickjs"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
